--- a/excercises/js/todoAPI /index.html
+++ b/excercises/js/todoAPI /index.html
@@ -6,18 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
 </head>
 <body>
-<!-- Basic Requirements (Bronze)
-The user can see their current list of todos. (Preferably they show up as soon as the page loads.)
-The user can add new todos to their list. The new item should be posted to the todo API so a future reload of the page will still display that new todo item.
-A user should be able to give the item a price.
-A user should be able to give the item a description -->
-
-
 
 <div class="container">
-    <header>TODO LIST!!!!</header>
+    <header><h1>TODO LIST!!!!</h1></header>
     <form name="formTodo">
         <input type="text" placeholder="add title" name="title"> 
         <input type="number" placeholder="add price" name="price">    
@@ -32,3 +27,4 @@ A user should be able to give the item a description -->
     <script src="app.js"></script>
 </body>
 </html>
+
