css zen garden 90percent

--- a/excercises/js/todoAPI /index.html
+++ b/excercises/js/todoAPI /index.html
@@ -20,7 +20,9 @@
         <button>Add Todo</button>
     </form>
 
-    <div id="items"></div>
+    <div id="items">
+        
+    </div>
 </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
